[gd_scene load_steps=9 format=2]

[ext_resource path="res://MinimalUI/MinimalUI.tres" type="Theme" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://scale3X.shader" type="Shader" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec2 square_pixels = vec2(32);
uniform float brightness = 0.0;

void fragment(){
	vec2 rect_size = 1.0/SCREEN_PIXEL_SIZE;
	vec2 square_size = 0.5*rect_size/square_pixels;
	COLOR = 0.15*(abs(vec4(step(fract(SCREEN_UV.x*square_size.x),0.5))-
	vec4(step(fract(SCREEN_UV.y*square_size.y),0.5))));
	COLOR.a = 1.0;
	COLOR.rgb += brightness;
	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/square_pixels = Vector2( 32, 32 )
shader_param/brightness = 0.0

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.282353, 0.282353, 0.282353, 1 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )

[sub_resource type="ButtonGroup" id=5]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBoard" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/Viewport"]
current = true

[node name="Sprites" type="Node2D" parent="ViewportContainer/Viewport"]

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -208.0
margin_top = 120.0
margin_right = -8.0
margin_bottom = 120.0
grow_horizontal = 0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 190.0
margin_bottom = 33.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 112.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Scale:"

[node name="SpinBox" type="SpinBox" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 116.0
margin_right = 190.0
margin_bottom = 33.0
min_value = 1.0
max_value = 9.0
value = 1.0

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -332.0
margin_top = -184.0
margin_right = 332.0
margin_bottom = 184.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png", "*.jpg", "*.jpeg", "*.bmp" )
current_dir = "/home/azagaya/GameDev/ScaleNX"
current_file = "icon.png"
current_path = "/home/azagaya/GameDev/ScaleNX/icon.png"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -332.0
margin_top = -184.0
margin_right = 332.0
margin_bottom = 184.0
window_title = "Guardar un Archivo"
access = 2
filters = PoolStringArray( "*.png", "*.jpg", "*.jpeg", "*.bmp" )
current_dir = "/home/azagaya/GameDev/ScaleNX"
current_file = "icon.png"
current_path = "/home/azagaya/GameDev/ScaleNX/icon.png"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scale27X" type="Viewport" parent="."]
size = Vector2( 1, 1 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 0
gui_disable_input = true

[node name="Sprite" type="Sprite" parent="Scale27X"]
material = SubResource( 4 )
scale = Vector2( 3, 3 )

[node name="Scale9X" type="Viewport" parent="."]
size = Vector2( 1, 1 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 0
gui_disable_input = true

[node name="Sprite" type="Sprite" parent="Scale9X"]
material = SubResource( 4 )
scale = Vector2( 3, 3 )

[node name="Scale3X" type="Viewport" parent="."]
size = Vector2( 1, 1 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 0
gui_disable_input = true

[node name="Sprite" type="Sprite" parent="Scale3X"]
material = SubResource( 4 )
scale = Vector2( 3, 3 )

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -20.0
margin_right = 72.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5
margin_top = -11.5
margin_right = 47.5
margin_bottom = 11.5
text = "Calculating..."

[node name="ToolBar" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="ToolBar"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 30.0

[node name="FileMenu" type="MenuButton" parent="ToolBar/VBoxContainer"]
margin_right = 35.0
margin_bottom = 25.0
text = "File"
items = [ "Import", null, 0, false, false, 0, 0, null, "", false, "Export", null, 0, false, false, 1, 0, null, "", false, "Exit", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true

[node name="ViewMenu" type="MenuButton" parent="ToolBar/VBoxContainer"]
margin_left = 39.0
margin_right = 84.0
margin_bottom = 25.0
focus_mode = 2
group = SubResource( 5 )
text = "View"
items = [ "Reset Zoom", null, 0, false, false, 0, 0, null, "", false, "Zoom to Fit", null, 0, false, false, 1, 0, null, "", false, "Reset Pan", null, 0, false, false, 2, 0, null, "", false, "", null, 0, false, false, 3, 0, null, "", true, "Light Background", null, 2, false, false, 4, 0, null, "", false, "Dark Backtround", null, 2, true, false, 5, 0, null, "", false ]
switch_on_hover = true

[node name="AboutMenu" type="MenuButton" parent="ToolBar/VBoxContainer"]
margin_left = 88.0
margin_right = 144.0
margin_bottom = 25.0
focus_mode = 2
text = "About"
items = [ "Import", null, 0, false, false, 0, 0, null, "", false, "Export", null, 0, false, false, 1, 0, null, "", false, "Exit", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true

[connection signal="value_changed" from="Panel/VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
